# cinic10

./: .gitignore  .pre-commit-config.yaml  EXPERIMENT_PLAN.md  Makefile  PACKAGE_STRUCTURE.md  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  test.yaml
notebooks/: eda.ipynb  stage_0_analysis.ipynb  stage_1_analysis.ipynb  stage_2_analysis.ipynb  stage_3_analysis.ipynb
outputs/01_grid__epochs_mobilenet/seed_0/: grid_results.csv  grid_results.json
outputs/01_grid__epochs_mobilenet/seed_0/run_000/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  metrics.json  test_metrics.json
outputs/01_grid__epochs_mobilenet/seed_3407/: grid_results.csv  grid_results.json
outputs/01_grid__epochs_mobilenet/seed_3407/run_000/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  metrics.json  test_metrics.json
outputs/01_grid__epochs_mobilenet/seed_42/: grid_results.csv  grid_results.json
outputs/01_grid__epochs_mobilenet/seed_42/run_000/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  metrics.json  test_metrics.json
outputs/01_grid_mobilenet/seed_0/: grid_results.csv  grid_results.json
outputs/01_grid_mobilenet/seed_0/run_000/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  metrics.json  test_metrics.json
outputs/01_grid_mobilenet/seed_0/run_001/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  metrics.json  test_metrics.json
outputs/01_grid_mobilenet/seed_0/run_002/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  metrics.json  test_metrics.json
outputs/01_grid_mobilenet/seed_0/run_003/: best.safetensors  epoch_metrics.json  epoch_resource_stats.json  (+2 more)
outputs/01_grid_mobilenet/seed_3407/: grid_results.csv  grid_results.json
outputs/01_grid_mobilenet/seed_42/: grid_results.csv  grid_results.json
report/: Interspeech.cls  mybib.bib  report.tex  template.tex
report/build_latex/: report.bbl
src/cinic10/: __init__.py  config.py  data.py  utils.py
src/cinic10/custom_convkan/: __init__.py  convkan_layer.py  kanlinear.py  kanresnet.py
src/cinic10/eda/: eda.ipynb
src/cinic10/experiments/: __init__.py  run_fewshot.py  run_grid_search.py  run_nas_convkan.py  run_nas_two_stage.py  run_train.py
src/cinic10/fewshot/: __init__.py  protonet.py
src/cinic10/models/: __init__.py  convkan.py  factory.py  nas_cnn.py
src/cinic10/training/: __init__.py  engine.py  mixing.py  optimizer.py
tests/: test_data_and_grid.py  test_nas_models.py  test_train_cli.py
(+507 files in other folders)
