[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinic10"
version = "0.1.0"
requires-python = ">=3.12.4,<3.12.5"

dependencies = [
    "convkan>=0.0.1.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kagglehub>=0.3.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pytest>=9.0.2",
    "safetensors>=0.6.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchkan>=0.1.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "custom_convkan",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RET",
    "ARG",
    "PIE",
    "PTH",
    "RUF",
    "S",
]
ignore = [
    "S101",
]
fixable = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["src"]
